tests/miniJava/neg/006692_mutation.MiniJava
class java { public static void public ( String [ ] java ) { { } } }
